<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/text_padding">


        <EditText
            android:id="@+id/editText1"
            style="@style/EditTextTheme"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:maxLength="25" />


        <EditText
            android:id="@+id/editText2"
            style="@style/EditTextTheme"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:maxLength="10" />

            <EditText
                android:id="@+id/editText3"
                style="@style/EditTextTheme"
                android:hint="@string/password"
                android:inputType="textPassword" />


        <EditText
            android:id="@+id/editText4"
            style="@style/EditTextTheme"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button3"
            style="@style/ButtonTheme"
            android:textSize="@dimen/text_size"
            android:text="@string/sign_up" />


</LinearLayout>