<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/linear_margin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/image_margin_top"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/text_padding">

        <EditText
            android:id="@+id/editText11"
            style="@style/EditTextTheme"
            android:hint="@string/name"
            android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText12"
                style="@style/EditTextTheme"
                android:hint="@string/password"
                android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            style="@style/ButtonTheme"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_margin_top"
            android:layout_marginBottom="@dimen/linear_margin_bottom"
            android:gravity="center">

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin_start"
                android:background="@android:color/transparent"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>